Use better way of setting NowPLayingListWidget size

The combination of setFlow() and the old way the size of the
widget was calculated caused Qt layout system to end up in
endless recursion (and subsequent crash).

BUG: 312957
Reviewed-By: David Edmundson