config/nowplaying-listwidget.h
@@ -36,6 +36,7 @@ public:
     void setupItems();
 
 protected:
+    void resizeEvent(QResizeEvent *event);
     void dragEnterEvent(QDragEnterEvent *event);
     void dragMoveEvent(QDragMoveEvent *event);
     void mousePressEvent(QMouseEvent *event);
